<package format="2">
  <name>roboteq_motor_interface</name>
  <version>0.0.1</version>
  <description>roboteq_motor_interface</description>
  <maintainer email="kelvinkang@cmu.edu">kelvinkang</maintainer>
  <license>proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>nav_msgs</depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
</package>
